SSCSCI-1345 (#4101)
* exposing endpoint to access port of entry enum from commons from frontend

* exposing endpoint to access country of residence enum from commons from frontend

* exposing endpoint to access country of residence enum from commons from frontend

* exposing endpoint to access country of residence enum from commons from frontend

* pointing to new sscs-common release and fixing checkstyle issues

* pointing to frontend pr

* undoing test update

* allowing for iba via github label

* fixing and making adding another ingress for iba so no reliance on github label

* moving exposed endpoints for country of residence and port of entry to citizen for more security

* renamed endpoints

* reverting preview sya pointing

* Update build.gradle

* SSCSCI-1047: New PR pointing at new version of SSCS Commons library

* SSCSCI-1128: Setting up manage case create for ibca

* SSCSCI-1128: Update definition file for
- ibca reference
- point of entry
NOTE: using dev snapshot of sscs commons

* SSCSCI-1128: Alter callback logic and add mid event

* SSCSCI-1128: Update port of entry label

* SSCSCI-1128: remove logging line

* SSCSCI-1128: Update port of entry label for exui tab

* SSCSCI-1128: Update to events to allow ibca cases to progress

* SSCSCI-1128: Update commons version

* SSCSCI-1128: Point at latest commons

* SSCSCI-1128: Update functional test to avoid ibc role check

* SSCSCI-1128: Fix ibca file name

* SSCSCI-1128: Update mid event to ensure validation only happens for ibca cases

* SSCSCI-1128: Address issues/comments

* SSCSCI-1128: Resolve issues after commons upgrade

* SSCSCI-1128: Bring fixed list element codes in line

* SSCSCI-1128: Remove method as redundant due to update to address sscs commons

* SSCSCI-1128: Add unit tests

* SSCSCI-1128: Update tabs and other show conditions for ibca cases

* SSCSCI-1128: Turn IBA toggle off

* SSCSCI-1128: Pull in changes from SSCSCI-